temp disable multistage test due to closures/diversions